syntax = "proto3";
package whatsapp;

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

option go_package = "/model";

message RegistrationRequest  {
    string  cc  = 1;
    string  phone_number = 2;

    enum ContactMethod {
        unknown = 0;
        sms = 1;
        voice = 2;
    }
    ContactMethod  method = 3;

    string  cert = 4;
    string pin = 5;
}

message VerifyRequest {
    string code = 1;
}


message ApplicationSettings {
    int32 callback_backoff_delay_ms =  1;
    int32 max_callback_backoff_delay_ms = 2;
    bool  callback_persist =  3;

    message Media {
        repeated string auto_download = 1;
    }

    Media media = 4;

    message Webhooks {
        string url = 1;
        int32 max_concurrent_requests = 2;
    }
    Webhooks webhooks = 5;
    bool pass_through = 6;
    bool sent_status = 7;
    bool db_garbagecollector_enable = 8;
    bool notify_user_change_number = 9;
    bool show_security_notifications = 10;
}


message ProfileAbout {
    string text = 1;
}

message BusinessProfile {
    string address = 1;
    string description = 2;
    string email = 3;
    string vertical = 4;
    repeated string websites = 5;
}
